# django-metamask-auth

./: .gitignore  LICENSE  README.rst  pyproject.toml  setup.cfg
SampleProject/sample/: requirement.txt
SampleProject/sample/frontend/: babel.config.json  package-lock.json  package.json  urls.py  views.py  webpack.config.js
SampleProject/sample/frontend/src/: index.js
SampleProject/sample/frontend/src/api/: api.js
SampleProject/sample/frontend/src/components/: App.js  MetaMask.js  style.css
SampleProject/sample/frontend/templates/frontend/: index.html
SampleProject/sample/sample/: asgi.py  settings.py  urls.py  wsgi.py
metaMaskAuth/: admin.py  api_settings.py  apps.py  models.py  serializers.py  urls.py  utils.py  views.py  viewsets.py
metaMaskAuth/migrations/: 0001_initial.py  0002_walletauthmodel_nonce_stale_and_more.py
metaMaskAuth/tests/: test_views.py
