[metadata]
name = django-metamask-auth
version = 1.0
description = A Django app for authentication using metamask.
long_description = file: README.rst
url = https://github.com/wassafshahzad/django-metamask-auth
author = Wassaf Shahzad
author_email = wassafshahzad@gmail.com
license = BSD-3-Clause
classifiers =
    Environment :: Web Environment
    Framework :: Django
    Framework :: Django :: 4 
    Intended Audience :: Developers
    License :: OSI Approved :: BSD License
    Operating System :: OS Independent
    Programming Language :: Python
    Programming Language :: Python :: 3
    Programming Language :: Python :: 3 :: Only
    Programming Language :: Python :: 3.8
    Programming Language :: Python :: 3.9
    Topic :: Internet :: WWW/HTTP
    Topic :: Internet :: WWW/HTTP :: Dynamic Content

[options]
include_package_data = true
packages = find:
python_requires = >=3.8
install_requires =
    web3
    djangorestframework-simplejwt


[options.packages.find]
exclude = 
    SampleProject*
    sample*
   